--- a/package.xml
+++ b/package.xml
@@ -7,11 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-<<<<<<< HEAD
-  <maintainer email="root@todo.todo">root</maintainer>
-=======
-  <maintainer email="mahika@todo.todo">mahika</maintainer>
->>>>>>> sync from container
+  <maintainer email="mvats.ieu2020@student.ie.edu">mvats1310</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -57,24 +53,22 @@
   <build_depend>control_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
-  <build_depend>play_motion_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>trajectory_msgs</build_depend>
+
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>control_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
-  <build_export_depend>play_motion_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>trajectory_msgs</build_export_depend>
+
   <exec_depend>actionlib</exec_depend>
   <exec_depend>control_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>play_motion_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
@@ -82,3 +76,4 @@
 
   </export>
 </package>
+
